--- a/maintenance/update.yml
+++ b/maintenance/update.yml
@@ -5,7 +5,7 @@
 # Licensed under CC BY 3.0. All rights reserved.
 #
 ---
-#- hosts: all
+- hosts: [Alpine]
 
   tasks:
   - name: update package list
