--- a/maintenance/update.yml
+++ b/maintenance/update.yml
@@ -5,7 +5,8 @@
 # Licensed under CC BY 3.0. All rights reserved.
 #
 ---
-- hosts: [Alpine]
+- name: Alpine Maintenance update
+  hosts: web
 
   tasks:
   - name: update package list
