--- a/maintenance/update.yml
+++ b/maintenance/update.yml
@@ -12,14 +12,17 @@
   - name: update package list
     ansible.builtin.command:
       cmd: /sbin/apk update -v
-    become: yes
+    #become: yes
+    become_method: sudo
 
   - name: update all packages
     ansible.builtin.command:
       cmd: /sbin/apk upgrade -U -a -v
-    become: yes
+    #become: yes
+    become_method: sudo
 
   - name: reboot system
     ansible.builtin.command:
       cmd: /sbin/reboot -d 5 --simulate
-    become: yes
+    #become: yes
+    become_method: sudo
