--- a/maintenance/update.yml
+++ b/maintenance/update.yml
@@ -11,18 +11,18 @@
   tasks:
   - name: update package list
     ansible.builtin.command:
-      cmd: /usr/sbin/sudo /sbin/apk update -v
+      cmd: /usr/bin/sudo /sbin/apk update -v
     #become: yes
     #become_method: sudo
 
   - name: update all packages
     ansible.builtin.command:
-      cmd: /usr/sbin/sudo /sbin/apk upgrade -U -a -v
+      cmd: /usr/bin/sudo /sbin/apk upgrade -U -a -v
     #become: yes
     #become_method: sudo
 
   - name: reboot system
     ansible.builtin.command:
-      cmd: /usr/sbin/sudo /sbin/reboot -d 5 --simulate
+      cmd: /usr/bin/sudo /sbin/reboot -d 5 --simulate
     #become: yes
     #become_method: sudo
