--- a/maintenance/update.yml
+++ b/maintenance/update.yml
@@ -9,6 +9,11 @@
   hosts: web
 
   tasks:
+- name: Ensure group "wheel" exists
+  ansible.builtin.group:
+    name: wheel
+    state: present
+    
   - name: update package list
     ansible.builtin.command:
       cmd: /usr/bin/sudo /sbin/apk update -v
