--- a/maintenance/dynamic-motd.yml
+++ b/maintenance/dynamic-motd.yml
@@ -34,11 +34,22 @@
       failed_when: motd_md5sum.stdout != "c0a59404b013ff89521279a95d097a8b  /etc/motd"
       ignore_errors: yes
 
+    - name: Output md5sum of the original Alpine motd file
+      debug:
+        msg: "MD5 sum of the original Alpine motd file: {{ motd_md5sum.stdout }}"
+
     - name: Backup original Alpine motd file if md5sum does not match
       copy:
         src: /etc/motd
         dest: /etc/motd.bak
       when: motd_md5sum.stdout != "c0a59404b013ff89521279a95d097a8b  /etc/motd"
+      register: motd_backup
+      failed_when: motd_backup.rc != 0
+
+    - name: Fail if motd backup fails
+      fail:
+        msg: "Backup of the original Alpine motd file failed"
+      when: motd_backup.rc != 0
 
     - name: Check for presence of motd script
       stat:
@@ -46,6 +57,7 @@
       register: motd_script
 
     - name: Create motd script if not present
+      become: yes
       copy:
         content: |
           #!/bin/sh
@@ -64,6 +76,7 @@
         mode: '0755'
 
     - name: Check execution of the file
+      become: yes
       command: run-parts --test /etc/periodic/{{ placeholder }}
       register: run_parts_test
       failed_when: run_parts_test.rc != 0
