--- a/maintenance/dynamic-motd.yml
+++ b/maintenance/dynamic-motd.yml
@@ -41,11 +41,12 @@
         msg: "{{motd_md5sum}}"
       when: motd_md5sum.failed
 
-    - name: Backup original Alpine motd file if md5sum does not match
+    - name: Backup original Alpine motd file if md5sum does match
       become: yes
       copy:
         src: /etc/motd
         dest: /etc/motd.bak
+        force: true
       when: not motd_md5sum.failed
       register: motd_backup
       failed_when: motd_backup.failed
