--- a/maintenance/dynamic-motd.yml
+++ b/maintenance/dynamic-motd.yml
@@ -21,7 +21,7 @@
     - name: Check if crond service is running
       command: rc-service crond status
       register: crond_running
-      failed_when: "'started' not in crond_running.stdout"
+      failed_when: "'started' not in crond_running.stdout"per
       ignore_errors: yes
 
     - name: Start crond service if not running
