--- a/maintenance/dynamic-motd.yml
+++ b/maintenance/dynamic-motd.yml
@@ -7,6 +7,16 @@
     md5sum: "c0a59404b013ff89521279a95d097a8b"
 
   tasks:
+    - name: Run a command with sudo
+      become: yes
+      become_method: sudo
+      command: whoami
+      register: result
+
+    - name: Output result
+      debug:
+        msg: "Command executed as: {{ result.stdout }}"
+
     - name: Check for presence of crond service
       command: rc-service crond status
       register: crond_status
@@ -46,12 +56,13 @@
       when: motd_md5sum.failed
 
     - name: Backup original Alpine motd file if md5sum does match
-      become: yes
-      become_method: sudo
-      copy:
-        src: /etc/motd
-        dest: /etc/motd.bak
-        force: true
+#      become: yes
+#      become_method: sudo
+#      copy:
+#        src: /etc/motd
+#        dest: /etc/motd.bak
+#        force: true
+      command: /usr/bin/sudo /bin/cp --force /etc/motd /etc/motd.bak
       when: not motd_md5sum.failed
       register: motd_backup
       failed_when: motd_backup.failed
@@ -67,29 +78,33 @@
       register: motd_script
 
     - name: Create motd script if not present
-      become: yes
-      become_method: sudo
-      copy:
-        content: |
-          #!/bin/sh
-          echo "Dynamic MOTD"
-        dest: /etc/periodic/{{ placeholder }}/{{ file }}
-        owner: root
-        group: root
-        mode: '0755'
+#      become: yes
+#      become_method: sudo
+#      copy:
+#        content: |
+#          #!/bin/sh
+#          echo "Dynamic MOTD"
+#        dest: /etc/periodic/{{ placeholder }}/{{ file }}
+#        owner: root
+#        group: root
+#        mode: '0755'
+      command: /usr/bin/sudo /bin/touch /etc/periodic/{{ placeholder }}/{{ file }}
       when: not motd_script.stat.exists
+      register: motd_script
 
     - name: Ensure correct file permissions
-      file:
-        path: /etc/periodic/{{ placeholder }}/{{ file }}
-        owner: root
-        group: root
-        mode: '0755'
+#      file:
+#        path: /etc/periodic/{{ placeholder }}/{{ file }}
+#        owner: root
+#        group: root
+#        mode: '0755'
+      command: /usr/bin/sudo /bin/chmod 0755 /etc/periodic/{{ placeholder }}/{{ file }}
+      when: motd_script.stat.exists
 
     - name: Check execution of the file
-      become: yes
-      become_method: sudo
-      command: run-parts --test /etc/periodic/{{ placeholder }}
+      #become: yes
+      #become_method: sudo
+      command: /usr/bin/sudo run-parts --test /etc/periodic/{{ placeholder }}
       register: run_parts_test
       failed_when: run_parts_test.failed
       ignore_errors: yes
