--- a/maintenance/whoami.yaml
+++ b/maintenance/whoami.yaml
@@ -20,3 +20,15 @@
     - name: Output result
       debug:
         msg: "Command executed as: {{ result.stdout }}"
+
+    - name: Create motd script if not present
+      become: yes
+      become_method: sudo
+      copy:
+        content: |
+          #!/bin/sh
+          echo "Dynamic MOTD"
+        dest: /etc/periodic/daily/test
+        owner: root
+        group: root
+        mode: '0755'
