--- a/maintenance/get_bearer_token.yml
+++ b/maintenance/get_bearer_token.yml
@@ -9,9 +9,9 @@
     cml_api_url: "https://{{ cml_api_host }}/api/v0/authenticate"
     # If authentication is needed, you can add:
     # cml_api_username: "admin"
-    cml_api_username: {{ ansible_user }}
+    cml_api_username: "{{ ansible_user }}"
     # cml_api_password: "password"
-    cml_api_password: {{ ansible_password }}
+    cml_api_password: "{{ ansible_password }}"
 
   tasks:
     - name: Get Cisco CML Bearer Token
