--- a/maintenance/check_auth.yml
+++ b/maintenance/check_auth.yml
@@ -8,18 +8,20 @@
     cml_api_port: 443
     cml_api_url: "https://{{ cml_api_host }}/api/v0/authok"
     # bearer_token: XXX
+    bearer_token: "{{ workflow_variables['Get Bearer token'].bearer_token }}"
 
-- name: Query CML authok endpoint with Bearer token
-  ansible.builtin.uri:
-    url: "{{ cml_api_url }}"
-    method: GET
-    headers:
-      Accept: "application/json"
-      Authorization: "Bearer {{ bearer_token }}"
-    return_content: yes
-    validate_certs: no  # set to yes if you have valid SSL certs
-  register: authok_response
+  tasks:
+  - name: Query CML authok endpoint with Bearer token
+    ansible.builtin.uri:
+      url: "{{ cml_api_url }}"
+      method: GET
+      headers:
+        Accept: "application/json"
+        Authorization: "Bearer {{ bearer_token }}"
+      return_content: yes
+      validate_certs: no  # set to yes if you have valid SSL certs
+    register: authok_response
 
-- name: Show authok response JSON
-  ansible.builtin.debug:
-    var: authok_response.json
+  - name: Show authok response JSON
+    ansible.builtin.debug:
+      var: authok_response.json
