--- a/maintenance/get_cml_status.yml
+++ b/maintenance/get_cml_status.yml
@@ -1,12 +1,13 @@
 ---
 - name: Fetch Cisco CML Maintenance Mode Status
-  hosts: localhost
+  hosts: all
   gather_facts: false
 
   vars:
-    cml_api_host: "192.168.100.198"
+    # cml_api_host: "192.168.100.198"
     cml_api_port: 443
-    cml_api_url: "https://{{ cml_api_host }}/api/v0/system/maintenance_mode"
+    # cml_api_url: "https://{{ cml_api_host }}/api/v0/system/maintenance_mode"
+    cml_api_url: "https://{{ ansible_host }}/api/v0/system/maintenance_mode"
     # If authentication is needed, you can add:
     # cml_api_username: "admin"
     # cml_api_password: "password"
