--- a/maintenance/List_Arista_EOS_Podman_images.yml
+++ b/maintenance/List_Arista_EOS_Podman_images.yml
@@ -1,6 +1,6 @@
 ---
 - name: List podman images on remote host X.Y.Z
-  hosts: localhost
+  hosts: "{{ ansible_hostname }}"
   gather_facts: yes  # gather facts for hostname, etc.
   become: no        # normal user by default
   ignore_errors: yes
